# azihsm-sdk

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  CODEOWNERS  CODE_REVIEW_REPORT.md  CONTRIBUTING  Cargo.toml  README.md  SUPPORT  _codeql_detected_source_root  clippy.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml
api/ddi/lib/: Cargo.toml
api/ddi/mock/: Cargo.toml
api/ddi/nix/: Cargo.toml
api/ddi/sim/: Cargo.toml
api/fuzz/: Cargo.toml
api/fuzz/fuzz_targets/: common.rs
api/lib/: Cargo.toml  Cargo.toml.bak  build.rs  cbindgen.toml
api/lib/src/: error.rs  lib.rs  partition.rs  resiliency.rs  session.rs  shared_types.rs
api/lib/tests/: aes_encrypt_decrypt.rs  aes_gcm_encrypt_decrypt.rs  aes_gcm_encrypt_decrypt_no_aad.rs  aes_xts_encrypt_decrypt.rs  attest_key.rs  common.rs  compat_ecc_sign.rs  ecc_sign_verify.rs  ecdh_key_exchange.rs  get_api_rev.rs  open_key.rs  rsa_encrypt_decrypt.rs  rsa_export_public_key.rs  rsa_sign_verify.rs  rsa_unwrap.rs  secret_derive.rs  test_aes_encrypt_decrypt_aesgenerate.rs  test_aes_encrypt_decrypt_hardcoded_keys.rs  test_aes_encrypt_decrypt_unwrapping_keys.rs  test_aes_gcm_encrypt_decrypt_aesgenerate.rs  test_aes_gcm_encrypt_decrypt_basics.rs  test_aes_gcm_encrypt_decrypt_hardedcodekey.rs  test_aes_gcm_encrypt_decrypt_rsaunwrap.rs  test_aes_generate_encrypt_decrypt_basics.rs  test_aes_xts_encrypt_decrypt_aesgenerate.rs  test_aes_xts_encrypt_decrypt_basics.rs  test_aes_xts_encrypt_decrypt_hardcodedkeys.rs  test_aes_xts_encrypt_decrypt_rsaunwrap.rs  test_app_session_change_pin.rs  test_app_session_close_session.rs  test_app_session_delete_key.rs  test_app_session_export_public_key.rs  test_app_session_open_key.rs  test_attest_ecc_key.rs  test_attest_key.rs  test_attest_rsa_key.rs  test_device_open.rs  test_ecc_generate_verifysignbasics.rs  test_ecc_sign_verify_eccgen.rs  test_ecc_sign_verify_hardcoded_keys.rs  (+23 more)
api/native/: Cargo.toml  build.rs  cbindgen.toml
api/native/doc/: chapter_00_change_history.md  chapter_02_part.md  chapter_03_session.md  chapter_04_algo.md  chapter_06_key_ops.md  chapter_07_crypto_ops.md  chapter_08_attest.md  chapter_09_data_structs.md  chapter_10_handle_ops.md
api/native/src/: crypto_digest.rs  crypto_enc_dec.rs  crypto_sign_verify.rs  handle_table.rs  key_mgmt.rs  key_props.rs  lib.rs  partition.rs  partition_props.rs  resiliency.rs  session.rs  session_props.rs  str.rs  utils.rs
api/resilience/: Cargo.toml  owners.txt
api/resilience/docs/: resiliency-design.md
api/resilience/src/: cache_storage.rs  lib.rs  memory_manager.rs  resilient_device.rs
api/resilience/tests/: common.rs  multi_threaded_establish_credentials.rs  multi_threaded_open_session.rs  multithreaded_resiliency.rs  named_key_unsupported.rs  reopen_session.rs  restore_credentials.rs  restore_session_keys.rs  unwrapping_key_resilience.rs
api/support/attestation/: Cargo.toml
api/support/lm_key_derive/: Cargo.toml
api/support/session_parameter_encryption/: Cargo.toml
api/tools/get_device_info/: Cargo.toml
api/tools/mbor_diag/: Cargo.toml
api/tools/mcr_api_perf/: Cargo.toml
api/tools/mcr_perf/: Cargo.toml
crates/cred_encrypt/: Cargo.toml
crates/cred_encrypt/src/: cred_encrypt.rs  error.rs  lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: ecc.rs  lib.rs
crates/test_with_tracing/: Cargo.toml
crates/test_with_tracing/src/: lib.rs
crates/test_with_tracing/test_with_tracing_macro/: Cargo.toml
crates/x509/: Cargo.toml
crates/x509/src/: lib.rs
ddi/interface/: Cargo.toml
ddi/interface/src/: error.rs  lib.rs
ddi/sim/: Cargo.toml
ddi/sim/src/: aesgcmxts.rs  attestation.rs  credentials.rs  crypto_env.rs  dispatcher.rs  errors.rs  function.rs  lib.rs  lmkey_derive.rs  mask.rs  report.rs  session.rs  session_table.rs  sim_crypto_env.rs  table.rs  vault.rs
ddi/win/: Cargo.toml
ddi/win/src/: ddi.rs  dev.rs  io_event.rs  lib.rs
hsm/cpp/: CMakeLists.txt  aes_tests.cpp  ec_tests.cpp  enc_dec_tests.cpp  helpers.cpp  helpers.h  hmac_tests.cpp  rsa_tests.cpp  sha_tests.cpp
napi/native/: Cargo.toml  cbindgen.toml
napi/native/doc/: chapter_03_session.md  chapter_06_key_ops.md  chapter_07_crypto_ops.md  chapter_09_data_structs.md
napi/native/src/: crypto_digest.rs  crypto_enc_dec.rs  crypto_sign_verify.rs  handle_table.rs  key_mgmt.rs  key_props.rs  lib.rs  partition.rs  session.rs  utils.rs
napi/tests/: Cargo.toml
napi/tests/cpp/: CMakeLists.txt  aes_cbc_tests.cpp  partition_tests.cpp  session_tests.cpp  tests.rs  utils.hpp
napi/tests/macro/: Cargo.toml
napi/tests/src/: lib.rs
plugins/ksp/: Cargo.toml  README.md  build.ps1  build.rs  owners.txt  rustfmt.toml  setup-env.ps1
plugins/ksp/.net/: common.cs  ksp_test.csproj  test_ecdsa_key_operation.cs  test_key_operation.cs  test_rsa_key_operations.cs
plugins/ksp/docs/: README.md  aes-cbc.md  aes-gcm.md  aes-xts.md  aes.md  ecdh.md  ecdsa.md  error_handling  fuzzing.md  integration_guide.md  introduction.md  key_management.md  references.md  rsa.md  sample_writing_guidelines.md  supported_algorithm.md  testing_and_validation.md  tracing.md
plugins/ksp/fuzz/: Cargo.toml
plugins/ksp/nuspec/: Azihsmkspinstall.ps1  Azihsmkspverify.ps1  azihsmksp.nuspec
plugins/ksp/onefuzz/: OneFuzzConfig.json  prepare-drop-dir.ps1  setup.ps1
plugins/ksp/samples/: KeyGuardDifferences.md
plugins/ksp/scripts/: guid.ctl  start_trace.bat  stop_trace.bat
plugins/ksp/src/: algorithms.rs  config.rs  errors.rs  etw_tracing.rs  handle_table.rs  interface.rs  lib.rs  ncrypt_types.rs  provider.rs  utils.rs
plugins/ksp/tests/: test_aes_cbc_encrypt_decrypt.rs  test_create_claim.rs  (+21 more)
plugins/openssl/: CMakeLists.txt  Makefile  README.md  build.sh
plugins/ossl_prov/: CMakeLists.txt  Cargo.toml  README.md  build.rs
xtask/: Cargo.toml
xtask/src/: audit.rs  build.rs  clang_format.rs  clean.rs  clippy.rs  common.rs  copy_provider.rs  copyright.rs  coverage.rs  coverage_report.rs  fmt.rs  install.rs  install_symcrypt.rs  main.rs  native.rs  nextest.rs  nextest_history.rs  nextest_report.rs  precheck.rs  rustup_component_add.rs  setup.rs  test.rs
(+1505 files in other folders)
