# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
edition = "2021"
name = "xtask"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
clap = { features = ["derive", "env"], workspace = true }
env_logger.workspace = true
ghac.workspace = true
glob = { workspace = true }
is-terminal = { workspace = true }
junit-parser.workspace = true
log.workspace = true
prost.workspace = true
serde = { features = ["derive"], workspace = true }
serde_json.workspace = true
similar = { features = ["text"], workspace = true }
tinytemplate.workspace = true
xshell.workspace = true

[lints]
workspace = true
