# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
edition = "2021"
name = "azihsm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
azihsm_cred_encrypt.workspace = true
azihsm_crypto.workspace = true
azihsm_ddi.workspace = true
azihsm_ddi_mbor.workspace = true
azihsm_ddi_types.workspace = true
cfg-if.workspace = true
delegate.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
strum.workspace = true
strum_macros.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
azihsm_ddi_nix.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
azihsm_ddi_win.workspace = true

[build-dependencies]
cbindgen.workspace = true

[features]
default = []
mock = ["azihsm_ddi/mock"]

[lints]
workspace = true
