# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
thiserror.workspace = true
tracing.workspace = true
symcrypt = { workspace = true, optional = true }
spki = { workspace = true, optional = true, features = ["alloc"] }
sec1 = { workspace = true, optional = true }
pem-rfc7468 = { workspace = true, optional = true, features = ["alloc"] }
pkcs8 = { workspace = true, optional = true}
pkcs1 = {workspace = true, optional = true}

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
test_with_tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
use-openssl = ["openssl"]
use-symcrypt = ["symcrypt", "spki", "sec1", "pkcs1", "pem-rfc7468", "pkcs8"]

[lints]
workspace = true
