# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
edition = "2024"
name = "azihsm_crypto"
version = "0.1.0"

[lib]
doctest = false

[dependencies]
asn1.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
openssl.workspace = true
openssl-sys.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[lints]
workspace = true

[dev-dependencies]
hex.workspace = true
rand.workspace = true
