# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "mcr_ddi_win"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
bitfield-struct.workspace = true
cfg-if.workspace = true
libc.workspace = true
mcr_ddi.workspace = true
mcr_ddi_mbor.workspace = true
mcr_ddi_types.workspace = true
parking_lot.workspace = true
tracing.workspace = true
winapi.workspace = true

[lints]
workspace = true
