# Copyright (C) Microsoft Corporation. All rights reserved.
[package]
edition = "2024"
name = "azihsm_napi_native"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
azihsm_napi.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[features]
default = []
mock = ["azihsm_napi/mock"]

[lints]
workspace = true
