# Copyright (C) Microsoft Corporation. All rights reserved.
[package]
edition = "2024"
name = "azishm_ossl_provider"
version = "0.1.0"

[dependencies]

[build-dependencies]
azihsm_api_native.workspace = true
cmake.workspace = true

[lints]
workspace = true

[features]
default = []
mock = []
provider = []
