# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "mcr_ddi_sim"
version = "0.1.0"
edition = "2021"

[features]
default = []
use-openssl = ["openssl","crypto/use-openssl"]
use-symcrypt = [
    "symcrypt",
    "spki",
    "sec1",
    "pem-rfc7468",
    "pkcs8",
    "pkcs1",
    "rand",
    "sha2",
    "generic-array",
    "crypto/use-symcrypt",
]
rust_analyzer_fix = []
fuzzing = ["arbitrary"]

[dependencies]
#crate specific subcrates
mcr_ddi_types.workspace = true
masked_key.workspace = true
crypto_env.workspace = true
crypto.workspace = true
lmkey_derive.workspace = true

#external crates
bitfield.workspace = true
bitfield-struct.workspace = true
mcr_ddi_mbor.workspace = true
minicbor.workspace = true
parking_lot.workspace = true
symcrypt = { workspace = true, optional = true }
tracing.workspace = true
uuid.workspace = true
spki = { workspace = true, optional = true }
sec1 = { workspace = true, optional = true }
pem-rfc7468 = { workspace = true, optional = true }
pkcs8 = { workspace = true, optional = true }
pkcs1 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
zerocopy.workspace = true
zeroize.workspace = true

# generic-array needed by sec1::EncodedPoint and sec1 does not export.
generic-array = { workspace = true, optional = true }

# The following crates are not included in workspace, as they may have
# crypto usage that shouldn't be included in client library
sha2 = { version = "0.10.8", features = ["oid"], optional = true }
time = { version = "0.3.6", default-features = false }
asn1 = { version = "0.20", default-features = false }
der = "0.7.8"
p256 = { version = "0.13.2", features = ["pkcs8"] }
p384 = { version = "0.13.0", features = ["pkcs8"] }
p521 = { version = "0.13.3", features = ["pkcs8"] }
rsa = { version = "0.9.7", features = ["hazmat"] }

# fuzzing dependencies
arbitrary = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography"] }

[dev-dependencies]
#support crates
test_with_tracing.workspace = true

#external crates
hex.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
openssl.workspace = true

[lints]
workspace = true
