# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
bitfield-struct.workspace = true
minicbor = { workspace = true, features = ["derive"] }
thiserror.workspace = true
crypto = { workspace = true }
tracing.workspace = true

[features]
default = []
use-openssl = ["crypto/use-openssl"]
use-symcrypt = ["crypto/use-symcrypt"]

[lints]
workspace = true
