# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "lmkey_derive"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto.workspace = true
crypto_env.workspace = true
masked_key.workspace = true
mcr_ddi_mbor.workspace = true
mcr_ddi_types.workspace = true

[features]
default = []
use-openssl = ["crypto_env/use-openssl"]
use-symcrypt = ["crypto_env/use-symcrypt"]
